[package]
name = "block-breaker"
version = "0.1.0"
edition = "2024"

# Remove dynamic linking on release otherwise will require dependencies on release
[dependencies]
bevy = { version = "0.18.0", features = ["dynamic_linking" ] }
# Enable the below for increase performance on release
# Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn"
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn"
] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
